[gd_scene load_steps=32 format=3 uid="uid://bvd5fk8237gkp"]

[ext_resource type="PackedScene" uid="uid://dpfndro2upgsp" path="res://Maps/NightOfTheUndead/Assets/SM_NightOfTheUndead.glb" id="1_you0s"]
[ext_resource type="PackedScene" uid="uid://k4aky2wyyeb8" path="res://Prefabs/PlayerCharacter/PlayerCharacter.tscn" id="2_y35rs"]
[ext_resource type="PackedScene" uid="uid://btydl5mrobo3c" path="res://Prefabs/WeaponPickup/WeaponPickup.tscn" id="3_cg45j"]
[ext_resource type="PackedScene" uid="uid://b2p11yehqnout" path="res://Prefabs/WPN_StenGun/WPN_StenGun.tscn" id="4_ljuca"]
[ext_resource type="PackedScene" uid="uid://r3rfc255387w" path="res://Maps/NightOfTheUndead/Assets/SM_Pillar.glb" id="5_mimke"]
[ext_resource type="PackedScene" uid="uid://dfbscgm7itkjb" path="res://Maps/NightOfTheUndead/Assets/SM_StoneWall.glb" id="6_2431x"]
[ext_resource type="PackedScene" uid="uid://bwcdid55tsji1" path="res://Maps/NightOfTheUndead/Assets/SM_BlockyPillar.glb" id="7_xaqi2"]
[ext_resource type="PackedScene" uid="uid://ykj5wtgsgpqm" path="res://Scenes/UI_DevelopmentHud/UI_DevelopmentHud.tscn" id="8_2ptce"]
[ext_resource type="CompressedTexture3D" uid="uid://d34ub26m3bb5" path="res://Maps/NightOfTheUndead/Assets/TEX_FogMask.png" id="9_bnxql"]
[ext_resource type="CompressedTexture3D" uid="uid://4k1vtixdhp4c" path="res://Maps/NightOfTheUndead/Assets/TEX_FogMaskInverted.png" id="9_wcsqs"]
[ext_resource type="Script" path="res://Maps/NightOfTheUndead/Enemies.gd" id="11_h3ply"]
[ext_resource type="Script" path="res://Prefabs/BuyableDoor/BuyableDoor.gd" id="12_1g40e"]
[ext_resource type="Script" path="res://Components/InteractableComponent.gd" id="12_qf50b"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ykafg"]
sky_top_color = Color(0.0862745, 0.0980392, 0.172549, 1)
sky_horizon_color = Color(0.571569, 0.56676, 0.576387, 1)
ground_horizon_color = Color(0.571569, 0.56676, 0.576387, 1)

[sub_resource type="Sky" id="Sky_o8a2v"]
sky_material = SubResource("ProceduralSkyMaterial_ykafg")

[sub_resource type="Environment" id="Environment_6mr4l"]
background_mode = 2
sky = SubResource("Sky_o8a2v")
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.101961, 0.117647, 0.137255, 1)
volumetric_fog_enabled = true
volumetric_fog_density = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_niggk"]
size = Vector3(1, 1.00281, 1)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vhxg7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7v30h"]
albedo_color = Color(0.0745098, 0.172549, 0.0823529, 1)
metallic_specular = 0.0
roughness_texture = SubResource("NoiseTexture2D_vhxg7")
roughness_texture_channel = 1

[sub_resource type="BoxMesh" id="BoxMesh_l1ktu"]

[sub_resource type="FogMaterial" id="FogMaterial_663bv"]
density = 0.0335
albedo = Color(0.0627451, 0.533333, 0.321569, 1)
emission = Color(0.235294, 0.235294, 0.235294, 1)
height_falloff = 0.000183791
density_texture = ExtResource("9_bnxql")

[sub_resource type="FogMaterial" id="FogMaterial_rwgp7"]
density = 0.4561
albedo = Color(0, 0.384314, 0.270588, 1)
emission = Color(0.141176, 0.168627, 0.168627, 1)
height_falloff = 1e-05
edge_fade = 7.35164
density_texture = ExtResource("9_wcsqs")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ixpre"]
albedo_color = Color(0.458824, 0.27451, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lrdbu"]
material = SubResource("StandardMaterial3D_ixpre")

[sub_resource type="BoxShape3D" id="BoxShape3D_bi3c8"]
size = Vector3(6.40466, 4.3186, 0.215485)

[sub_resource type="BoxShape3D" id="BoxShape3D_iff8q"]
size = Vector3(3.94752, 4.83563, 0.24707)

[sub_resource type="BoxMesh" id="BoxMesh_r2d1j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b015q"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.313726)

[sub_resource type="BoxShape3D" id="BoxShape3D_3qj0n"]
size = Vector3(6.2014, 4.67261, 0.183868)

[sub_resource type="BoxShape3D" id="BoxShape3D_1atdv"]
size = Vector3(4.14478, 4.80972, 0.185974)

[sub_resource type="BoxShape3D" id="BoxShape3D_n3t03"]
size = Vector3(29.0608, 5.32239, 0.243652)

[node name="MAP_NightOfTheUndead" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6mr4l")

[node name="SM_NightOfTheUndead" parent="." instance=ExtResource("1_you0s")]
transform = Transform3D(-4.80825e-08, 0, 1.1, 0, 1.1, 0, -1.1, 0, -4.80825e-08, -0.437709, 0, 0.0868774)

[node name="PlayerCharacter" parent="." instance=ExtResource("2_y35rs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0813923, -0.255912, -14.989)

[node name="WeaponPickup" parent="." instance=ExtResource("3_cg45j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.851124, -0.255916, 2.53156)
weapon = ExtResource("4_ljuca")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0843387, 0.996437, 0, -0.996437, 0.0843387, 0, 4.18123, 0)
light_energy = 0.05

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(150, 0, 0, 0, 150, 0, 0, 0, 150, -12.9845, -75.7301, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00140381, 0)
shape = SubResource("BoxShape3D_niggk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00274917, -5.96046e-08, -0.000309932)
material_override = SubResource("StandardMaterial3D_7v30h")
mesh = SubResource("BoxMesh_l1ktu")

[node name="SM_Pillar" parent="." instance=ExtResource("5_mimke")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33.0431, -0.283818, 8.38243)

[node name="SM_Pillar2" parent="." instance=ExtResource("5_mimke")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -47.3319, -0.283818, 8.38243)

[node name="SM_Pillar3" parent="." instance=ExtResource("5_mimke")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33.0431, -0.283818, -6.03916)

[node name="SM_Pillar4" parent="." instance=ExtResource("5_mimke")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -47.3319, -0.283818, -6.03916)

[node name="SM_StoneWall" parent="." instance=ExtResource("6_2431x")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 0.866302, 0, 1.50996e-07, 0, -1, -32.9459, -0.175735, -20.9703)

[node name="SM_StoneWall2" parent="." instance=ExtResource("6_2431x")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 0.866302, 0, -1, 0, -4.37114e-08, -43.2757, -0.175735, -27.1232)

[node name="SM_StoneWall3" parent="." instance=ExtResource("6_2431x")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 0.866302, 0, -1, 0, -4.37114e-08, -28.2711, -0.175735, -25.5726)

[node name="SM_StoneWall4" parent="." instance=ExtResource("6_2431x")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 0.866302, 0, 1, 0, -4.37114e-08, -37.0935, -0.175735, -27.2113)

[node name="SM_BlockyPillar" parent="." instance=ExtResource("7_xaqi2")]
transform = Transform3D(2.11672, 0, 0, 0, 1, 0, 0, 0, 2.1674, -32.872, -0.284196, -26.3779)

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.179703, 31.3157, 0)
omni_range = 51.1657

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.1992, 31.3157, 0)
omni_range = 51.1657

[node name="OmniLight3D4" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.4925, 31.3765, -30.8267)
omni_range = 51.1657

[node name="UI_DevelopmentHud" parent="." node_paths=PackedStringArray("player_character") instance=ExtResource("8_2ptce")]
player_character = NodePath("../PlayerCharacter")

[node name="GeneralFog" type="FogVolume" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -16.1728, -0.31871, -1.80531)
size = Vector3(95, 95, 39.18)
material = SubResource("FogMaterial_663bv")

[node name="OuterFog" type="FogVolume" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -16.1728, -0.31871, -1.80531)
size = Vector3(190, 190, 46.88)
material = SubResource("FogMaterial_rwgp7")

[node name="Enemies" type="Node3D" parent="."]
script = ExtResource("11_h3ply")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="RoundCooldownTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="BuyableDoor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.8054, -0.28187, 16.3086)
script = ExtResource("12_1g40e")

[node name="InteractableComponent" type="Node" parent="BuyableDoor"]
script = ExtResource("12_qf50b")
text = "Open door ($PRICE)"
price = 3000

[node name="MeshInstance3D" type="MeshInstance3D" parent="BuyableDoor"]
transform = Transform3D(6.28983, 0, 0, 0, 4.94303, 0, 0, 0, 0.194612, 0.257003, 2.35644, 0)
mesh = SubResource("BoxMesh_lrdbu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BuyableDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.347059, 2.51327, -0.00331116)
shape = SubResource("BoxShape3D_bi3c8")

[node name="BuyableDoor2" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -24.735, -0.28187, 2.60964)
script = ExtResource("12_1g40e")

[node name="InteractableComponent" type="Node" parent="BuyableDoor2"]
script = ExtResource("12_qf50b")
text = "Open door ($PRICE)"
price = 1250

[node name="MeshInstance3D" type="MeshInstance3D" parent="BuyableDoor2"]
transform = Transform3D(4.28979, 0, 0, 0, 4.94303, 0, 1.42109e-14, 0, 0.194612, -0.43087, 2.35644, 0)
mesh = SubResource("BoxMesh_lrdbu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BuyableDoor2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.454676, 2.4465, 0.0112305)
shape = SubResource("BoxShape3D_iff8q")

[node name="BuyableDoor3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.4055, -0.28187, -16.1382)
script = ExtResource("12_1g40e")

[node name="InteractableComponent" type="Node" parent="BuyableDoor3"]
script = ExtResource("12_qf50b")
text = "Open door ($PRICE)"
price = 1250

[node name="MeshInstance3D" type="MeshInstance3D" parent="BuyableDoor3"]
transform = Transform3D(3.9326, 0, 0, 0, 4.94303, 0, 0, 0, 0.194612, -0.396149, 2.35644, 0)
mesh = SubResource("BoxMesh_lrdbu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BuyableDoor3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.392267, 2.4465, 0.0112305)
shape = SubResource("BoxShape3D_iff8q")

[node name="BuyableDoor4" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.7111, -0.28187, -16.1545)
script = ExtResource("12_1g40e")

[node name="InteractableComponent" type="Node" parent="BuyableDoor4"]
script = ExtResource("12_qf50b")
text = "Open door ($PRICE)"
price = 1250

[node name="MeshInstance3D" type="MeshInstance3D" parent="BuyableDoor4"]
transform = Transform3D(4.18232, 0, 0, 0, 4.94303, 0, 0, 0, 0.194612, -0.148785, 2.35644, 0)
mesh = SubResource("BoxMesh_lrdbu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BuyableDoor4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.144901, 2.4465, 0.0112305)
shape = SubResource("BoxShape3D_iff8q")

[node name="ZombieDoor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.525, -0.283705, 16.3749)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieDoor"]
transform = Transform3D(6.61531, 0, 0, 0, 4.94449, 0, 0, 0, 0.137277, -2.73435, 2.33126, -0.0699711)
mesh = SubResource("BoxMesh_r2d1j")
surface_material_override/0 = SubResource("StandardMaterial3D_b015q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.70752, 2.45954, -0.0735779)
shape = SubResource("BoxShape3D_3qj0n")

[node name="ZombieDoor2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.720968, -0.283705, -16.1042)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieDoor2"]
transform = Transform3D(6.61531, 0, 0, 0, 4.94449, 0, 0, 0, 0.137277, -2.73435, 2.33126, 0)
mesh = SubResource("BoxMesh_r2d1j")
surface_material_override/0 = SubResource("StandardMaterial3D_b015q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieDoor2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.70752, 2.45954, -0.0273247)
shape = SubResource("BoxShape3D_3qj0n")

[node name="ZombieDoor3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.3615, -0.283705, -48.9088)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieDoor3"]
transform = Transform3D(4.12449, 0, 0, 0, 4.94449, 0, 0, 0, 0.137277, -2.55828, 2.33126, 0)
mesh = SubResource("BoxMesh_r2d1j")
surface_material_override/0 = SubResource("StandardMaterial3D_b015q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieDoor3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.249, 2.43329, -0.0149193)
shape = SubResource("BoxShape3D_3qj0n")

[node name="ZombieDoor4" type="StaticBody3D" parent="."]
transform = Transform3D(0.953375, 0, 0.301788, 0, 1, 0, -0.301788, 0, 0.953375, -30.7353, -0.283705, 20.6029)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieDoor4"]
transform = Transform3D(3.98968, 0, 0, 0, 4.94449, 0, 5.96046e-07, 0, 0.137277, -1.48031, 2.33126, -5.72205e-06)
mesh = SubResource("BoxMesh_r2d1j")
surface_material_override/0 = SubResource("StandardMaterial3D_b015q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieDoor4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.51098, 2.45954, -0.0273237)
shape = SubResource("BoxShape3D_1atdv")

[node name="ZombieDoor5" type="StaticBody3D" parent="."]
transform = Transform3D(-0.452513, 0, -0.891758, 0, 1, 0, 0.891758, 0, -0.452513, -55.5299, -0.283705, -7.0797)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieDoor5"]
transform = Transform3D(4.11593, 0, 0, 0, 4.94449, 0, 5.96046e-07, 0, 0.137277, -1.57966, 2.33126, 0)
mesh = SubResource("BoxMesh_r2d1j")
surface_material_override/0 = SubResource("StandardMaterial3D_b015q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieDoor5"]
transform = Transform3D(0.999998, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, 0.999998, -1.57238, 2.45954, -0.0273247)
shape = SubResource("BoxShape3D_1atdv")

[node name="ZombieDoor6" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -48.0193, -0.283705, -45.2639)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieDoor6"]
transform = Transform3D(4.12449, 0, 0, 0, 4.94449, 0, 0, 0, 0.137277, -2.55828, 2.33126, 0)
mesh = SubResource("BoxMesh_r2d1j")
surface_material_override/0 = SubResource("StandardMaterial3D_b015q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieDoor6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.249, 2.43329, -0.0149193)
shape = SubResource("BoxShape3D_3qj0n")

[node name="ZombieDoor7" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -15.5893, -0.283705, -35.0343)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieDoor7"]
transform = Transform3D(4.12449, 0, 0, 0, 4.94449, 0, 0, 0, 0.137277, -2.55828, 2.33126, 0)
mesh = SubResource("BoxMesh_r2d1j")
surface_material_override/0 = SubResource("StandardMaterial3D_b015q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieDoor7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.249, 2.43329, -0.0149193)
shape = SubResource("BoxShape3D_3qj0n")

[node name="ZombieDoor8" type="StaticBody3D" parent="."]
transform = Transform3D(0.953375, 0, 0.301788, 0, 1, 0, -0.301788, 0, 0.953375, -2.26088, -0.283705, 25.0219)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieDoor8"]
transform = Transform3D(26.5651, 0, 0.0482862, 0, 4.94449, 0, -9.98199, 0, 0.128504, -13.8846, 2.33126, 6.48846)
mesh = SubResource("BoxMesh_r2d1j")
surface_material_override/0 = SubResource("StandardMaterial3D_b015q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieDoor8"]
transform = Transform3D(0.935098, 0, 0.354389, 0, 1, 0, -0.354389, 0, 0.935098, -13.9198, 2.16712, 6.46519)
shape = SubResource("BoxShape3D_n3t03")

[connection signal="child_order_changed" from="Enemies" to="Enemies" method="_on_child_order_changed"]
[connection signal="round_cooldown" from="Enemies" to="UI_DevelopmentHud" method="_on_enemies_round_cooldown"]
[connection signal="round_increased" from="Enemies" to="UI_DevelopmentHud" method="_on_enemies_round_increased"]
[connection signal="timeout" from="EnemySpawnTimer" to="Enemies" method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="RoundCooldownTimer" to="Enemies" method="_on_round_cooldown_timer_timeout"]
